@startuml Composite Pattern - ElementarClash

!define ABSTRACT_CLASS abstract class
!define INTERFACE interface

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam class {
    BackgroundColor<<Component>> LightYellow
    BorderColor<<Component>> DarkOrange
    BackgroundColor<<Leaf>> LightGreen
    BorderColor<<Leaf>> DarkGreen
    BackgroundColor<<Composite>> LightBlue
    BorderColor<<Composite>> DarkBlue
}

package "org.elementarclash.battlefield" {

    ' ===== Component =====
    INTERFACE BattlefieldComponent <<Component>> {
        + cells(): List<Cell>
        + {default} applyEffect(effect: TerrainEffect): void
        + {default} getCell(index: int): Cell
    }

    ' ===== Leaf =====
    class Cell <<Leaf>> {
        - position: Position
        - terrain: Terrain
        __
        + Cell(position: Position, terrain: Terrain)
        __
        + cells(): List<Cell>
        + applyEffect(effect: TerrainEffect): void
        + getTerrain(): Terrain
        + setTerrain(terrain: Terrain): void
    }

    ' ===== Composite =====
    class Region <<Composite>> <<record>> {
        - cells: List<Cell>
        __
        + Region(cells: List<Cell>)
        __
        + cells(): List<Cell>
    }

    class Battlefield <<Composite>> {
        + {static} GRID_SIZE: int = 10
        - {static} TOTAL_CELLS: int = 100
        __
        - rows: List<Region>
        __
        + Battlefield()
        __
        + cells(): List<Cell>
        + initializeTerrain(distribution: Map<Terrain, Integer>, seed: Long): void
        + getTerrainAt(position: Position): Terrain
        + setTerrainAt(position: Position, terrain: Terrain): void
        + getCell(x: int, y: int): Cell
        + getRegion(x1: int, y1: int, x2: int, y2: int): Region
    }

    ' ===== Strategy Pattern (works with Composite) =====
    INTERFACE TerrainEffect {
        + apply(cell: Cell): Terrain
    }

    enum Terrain {
        LAVA
        ICE
        FOREST
        DESERT
        STONE
    }

    class Position <<record>> {
        + x: int
        + y: int
    }
}

package "org.elementarclash.battlefield.effects" {
    class ForestFireEffect {
        + apply(cell: Cell): Terrain
    }

    class GeysirEffect {
        + apply(cell: Cell): Terrain
    }

    class IceMeltEffect {
        + apply(cell: Cell): Terrain
    }
}

' ===== Composite Pattern Relationships (Battlefield) =====
BattlefieldComponent <|.. Cell
BattlefieldComponent <|.. Region
BattlefieldComponent <|.. Battlefield

Battlefield *-- "10" Region : contains
Region *-- "10" Cell : contains
Cell --> Position
Cell --> Terrain

' ===== Strategy Pattern Integration =====
TerrainEffect <|.. ForestFireEffect
TerrainEffect <|.. GeysirEffect
TerrainEffect <|.. IceMeltEffect
BattlefieldComponent ..> TerrainEffect : <<uses>>

' ===== Notes =====
note right of BattlefieldComponent
  **Composite Pattern (GoF #3)**

  **Component Interface**
  - Defines uniform interface for all nodes
  - Default methods reduce code duplication

  **DRY Principle:**
  applyEffect() and getCell() implemented
  once as default methods, reused by all
  composites (Region, Battlefield)

  **KISS Principle:**
  Simple interface with only essential methods
end note

note bottom of Cell
  **Leaf**

  Smallest unit in hierarchy.
  Cannot contain other components.

  Overrides applyEffect() to actually
  transform terrain (not delegate).
end note

note bottom of Region
  **Composite - Dual Purpose**

  Represents both:
  1. **Fixed Rows:** 10 regions form the grid structure
     (Battlefield → 10 Regions → 100 Cells)

  2. **Dynamic Areas:** Arbitrary cell subsets for
     localized effects (forest fires, earthquakes)

  **Example:**
  Region forestArea = battlefield.getRegion(4, 4, 6, 6);
  forestArea.applyEffect(new ForestFireEffect());
  // Applies fire to 3x3 region
end note

note bottom of Battlefield
  **Root Composite**

  Hierarchy: Battlefield → 10 Regions → 100 Cells

  **Usage Examples:**

  // Single cell
  Cell cell = battlefield.getCell(5, 5);
  cell.setTerrain(Terrain.FOREST);

  // Region (3x3 area)
  Region region = battlefield.getRegion(4, 4, 6, 6);
  region.applyEffect(new ForestFireEffect());

  // Entire battlefield
  battlefield.applyEffect(new ForestFireEffect());

  All use same interface!
end note

note right of TerrainEffect
  **Strategy Pattern Integration**

  TerrainEffect works seamlessly
  with Composite Pattern:

  - Can be applied to single Cell (Leaf)
  - Can be applied to Region (Composite)
  - Can be applied to Battlefield (Root)

  Same effect, different scope!
end note

note as N1
  **Composite Pattern - Battlefield Hierarchy**

  BattlefieldComponent
  ├── Cell (Leaf - einzelne Zelle)
  ├── Region (Composite - fixe Zeilen + dynamische Regionen)
  └── Battlefield (Root - 10 Regionen à 10 Zellen)

  **Ermöglicht einheitliche Operationen auf:**
  - Einzelnen Zellen (Leaf)
  - Beliebigen Regionen (Composite)
  - Gesamtem Battlefield (Root)

  **Pattern-Qualität:**
  ✅ Einheitliche Schnittstelle (cells(), applyEffect())
  ✅ Rekursive Operationen (automatische Propagierung)
  ✅ DRY durch Default-Methoden
  ✅ Flexible Gruppierung (Grid + dynamische Areas)
end note

@enduml
